--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/k5_iot_springboot
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+# logging.file.name=logs/app.log
+logging.level.root=INFO
 # spring.jpa.hibernate.ddl-auto=update
 
