--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.profiles.active=secret
 
 spring.datasource.url=jdbc:mysql://localhost:3306/k5_iot_springboot
 spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
